Frontend Changed to use Maven